--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+CacheControl==0.11.6
 click==6.2
 coloredlogs==5.0
 dagger==1.3.0
@@ -5,9 +6,9 @@ GitPython==1.0.1
 inflection==0.3.1
 ipdb==0.8.1
 json-delta==2.0
+lockfile==0.12.2  # Optional dep used by cachecontrol
 lxml==3.5.0
 pyparsing==2.0.5  # 2.0.6 has a unicode bug, fixed in current trunk: http://sourceforge.net/p/pyparsing/code/HEAD/tree/tags/pyparsing_2.0.6/src/pyparsing.py#l2354
 python-constraint==1.2
 requests==2.9.1
-requests-cache==0.4.10
 -e .
